# individual_project

./: README.md  main.py  pyproject.toml
data/clean/: hhi_importer_year.csv  impact_china_shock.csv  impact_merged.csv
data/raw/: Phase1_1990_2001.csv  Phase2_2001_2008.csv  Phase3_2009_2017.csv  Phase4_2018_2019.csv  Phase5_2020_2021.csv  Phase6_2022_2025.csv
notebooks/: Cleaning_and_Supply_Concentration.ipynb  Untitled.ipynb  Untitled1.ipynb  functions.py
notebooks/.ipynb_checkpoints/: Cleaning_and_Supply_Concentration-checkpoint.ipynb  Untitled1-checkpoint.ipynb
